# camera-trap-people-sort

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  sort_by_people.py
camera_trap_people_sort/: cli.py
src/camera_trap_people_sort/: cli.py
tests/: __init__.py  test_cli.py
