[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "camera-trap-people-sort"
version = "0.1.9"
authors = [
  { name="Mahangu Weerasinghe", email="mahangu@gmail.com" },
]
description = "Sort camera trap images by number of people detected using multiple AI models"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["camera-trap", "wildlife", "computer-vision", "ai", "yolo", "megadetector"]
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "ultralytics>=8.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "PytorchWildlife>=0.4.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "tabulate>=0.9.0",
]

[project.urls]
"Homepage" = "https://github.com/mahangu/camera-trap-people-sort"
"Bug Tracker" = "https://github.com/mahangu/camera-trap-people-sort/issues"
"Documentation" = "https://github.com/mahangu/camera-trap-people-sort#readme"
"Source Code" = "https://github.com/mahangu/camera-trap-people-sort"

[project.scripts]
camera-trap-people-sort = "camera_trap_people_sort.cli:main"

[project.optional-dependencies]
dev = [
    "black>=24.1.1",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=camera_trap_people_sort"
testpaths = [
    "tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/camera_trap_people_sort"]
